# pewpewordie

./: .gitignore  .pre-commit-config.yaml  README.rst  pyproject.toml
src/: constants.py  main.py
src/assets/: OFL.txt
